# ddog

./: .gitignore  Cargo.toml  README.md
.github/workflows/: dependency-review.yml  release.yml
crates/dd-api/: Cargo.toml
crates/dd-api/src/: client.rs  dashboards.rs  error.rs  lib.rs  logs.rs  metrics.rs  monitors.rs
crates/dd-cli/: Cargo.toml
crates/dd-cli/src/: cli.rs  main.rs  output.rs  time_spec.rs
crates/dd-cli/src/dashboards/: get.rs  list.rs  mod.rs
crates/dd-cli/src/logs/: aggregate.rs  facets.rs  get.rs  mod.rs  search.rs  tail.rs
crates/dd-cli/src/metrics/: mod.rs  query.rs
crates/dd-cli/src/monitors/: get.rs  list.rs  mod.rs
crates/dd-config/: Cargo.toml
crates/dd-config/src/: lib.rs
docs/: RELEASING.md  SPECIFICATION.md  config.example.toml
