[workspace]
members = ["crates/dd-cli", "crates/dd-api", "crates/dd-config"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/Battle-Creek-LLC/ddog"
categories = ["command-line-utilities"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["parsing", "formatting", "serde-well-known", "macros"] }
is-terminal = "0.4"
comfy-table = "7"
toml = "0.8"
directories = "5"
url = "2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
