[package]
name = "dd-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "ddog"
path = "src/main.rs"

[dependencies]
dd-api = { path = "../dd-api" }
dd-config = { path = "../dd-config" }
anyhow.workspace = true
clap.workspace = true
is-terminal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
comfy-table.workspace = true
time.workspace = true
