[package]
name = "dd-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
description = "Configuration loader for the ddog Datadog CLI."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
toml.workspace = true
directories.workspace = true
